--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.8.7",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "bootstrap": "^5.1.3",
     "framer-motion": "^6.2.9",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-icons": "^4.3.1",
+    "reactstrap": "^9.0.2"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
