--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-icons": "^4.3.1",
+    "react-multi-carousel": "^2.8.0",
     "reactstrap": "^9.0.2"
   },
   "devDependencies": {
