--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.1.3",
     "framer-motion": "^6.2.9",
     "next": "12.1.4",
+    "prisma": "^3.14.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-icons": "^4.3.1",
