--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@prisma/client": "^3.14.0",
     "bootstrap": "^5.1.3",
     "framer-motion": "^6.2.9",
     "next": "12.1.4",
