--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-dom": "18.0.0",
     "react-icons": "^4.3.1",
     "react-multi-carousel": "^2.8.0",
-    "reactstrap": "^9.0.2"
+    "react-toastify": "^9.0.1",
+    "reactstrap": "^9.0.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
