--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prisma": "^3.14.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-elfsight-widget": "^1.0.0",
     "react-icons": "^4.3.1",
     "react-multi-carousel": "^2.8.0",
     "react-toastify": "^9.0.1",
