--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.9.0",
+  "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@prisma/client": "^3.14.0",
     "bootstrap": "^5.1.3",
     "framer-motion": "^6.2.9",
+    "mime-types": "^2.1.35",
+    "multer": "^1.4.4",
     "next": "12.1.4",
+    "next-connect": "^0.12.2",
     "prisma": "^3.14.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
@@ -23,9 +26,12 @@
     "react-multi-carousel": "^2.8.0",
     "react-toastify": "^9.0.1",
     "reactstrap": "^9.0.2",
+    "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/mime-types": "^2.1.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
