--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-  "@emotion/react": "^11.9.0",
+    "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^3.14.0",
     "bootstrap": "^5.1.3",
     "framer-motion": "^6.2.9",
     "mime-types": "^2.1.35",
     "multer": "^1.4.4",
     "next": "12.1.4",
+    "next-auth": "^4.3.4",
     "next-connect": "^0.12.2",
     "prisma": "^3.14.0",
     "react": "18.0.0",
