--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.0.0",
     "react-elfsight-widget": "^1.0.0",
     "react-icons": "^4.3.1",
+    "react-minimal-side-navigation": "^1.9.2",
     "react-multi-carousel": "^2.8.0",
     "react-toastify": "^9.0.1",
     "reactstrap": "^9.0.2",
