--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.8.1",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^3.14.0",
+    "@syncfusion/ej2-react-grids": "^20.1.57",
+    "@syncfusion/ej2-react-richtexteditor": "^20.1.57",
     "bootstrap": "^5.1.3",
     "framer-motion": "^6.2.9",
     "mime-types": "^2.1.35",
