--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^3.14.0",
     "@syncfusion/ej2-react-grids": "^20.1.57",
+    "@syncfusion/ej2-react-inputs": "^20.1.58",
     "@syncfusion/ej2-react-richtexteditor": "^20.1.57",
     "bootstrap": "^5.1.3",
     "framer-motion": "^6.2.9",
@@ -29,6 +30,7 @@
     "react-icons": "^4.3.1",
     "react-minimal-side-navigation": "^1.9.2",
     "react-multi-carousel": "^2.8.0",
+    "react-query": "^3.39.1",
     "react-toastify": "^9.0.1",
     "reactstrap": "^9.0.2",
     "uuid": "^8.3.2"
