--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@syncfusion/ej2-react-inputs": "^20.1.58",
     "@syncfusion/ej2-react-richtexteditor": "^20.1.57",
     "bootstrap": "^5.1.3",
+    "dayjs": "^1.11.2",
     "framer-motion": "^6.2.9",
     "mime-types": "^2.1.35",
     "multer": "^1.4.4",
