--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^6.2.9",
     "mime-types": "^2.1.35",
     "multer": "^1.4.4",
+    "multiparty": "^4.2.3",
     "next": "12.1.4",
     "next-auth": "^4.3.4",
     "next-connect": "^0.12.2",
@@ -34,11 +35,13 @@
     "react-query": "^3.39.1",
     "react-toastify": "^9.0.1",
     "reactstrap": "^9.0.2",
+    "sharp": "^0.30.6",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/mime-types": "^2.1.1",
     "@types/multer": "^1.4.7",
+    "@types/multiparty": "^0.0.33",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
