--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.1.3",
     "dayjs": "^1.11.2",
     "framer-motion": "^6.2.9",
+    "html-react-parser": "^1.4.14",
     "mime-types": "^2.1.35",
     "multiparty": "^4.2.3",
     "next": "12.1.4",
