--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "12.1.4",
     "next-auth": "^4.3.4",
     "next-connect": "^0.12.2",
+    "nodemailer": "^6.7.5",
     "prisma": "^3.14.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
@@ -48,6 +49,7 @@
     "@types/multer": "^1.4.7",
     "@types/multiparty": "^0.0.33",
     "@types/node": "17.0.23",
+    "@types/nodemailer": "^6.4.4",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
     "eslint": "8.12.0",
