--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-toastify": "^9.0.1",
     "reactstrap": "^9.0.2",
     "sharp": "^0.30.6",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/mime-types": "^2.1.1",
