--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.8.1",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^3.14.0",
+    "@syncfusion/ej2-react-calendars": "^20.2.38",
     "@syncfusion/ej2-react-grids": "^20.1.57",
     "@syncfusion/ej2-react-inputs": "^20.1.58",
     "@syncfusion/ej2-react-richtexteditor": "^20.1.57",
